--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -25,83 +25,101 @@
 .tag_age_12under {
   background: #9fc972;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_age_13over {
   background: #4b563a;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_symptom_pain {
   background: #eb9ea1;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_symptom_bored_short {
   background: #f3d26a;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_symptom_bored_long {
   background: #c2bfde;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_symptom_anxiety {
   background: #a1d6ee;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_symptom_sadness {
   background: #fab169;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .tag_symptom_cognitive {
   background: #ccd7c2;
   color: white;
-  width: 80px;
+  width: 160px;
 }
 .right {
-    margin: 5%;
-    margin-top: 0%;
-    margin-bottom: 2%;
-    color: green;
-    background: white;
+  margin: 5%;
+  margin-top: 0%;
+  margin-bottom: 2%;
+  color: green;
+  background: white;
 }
 
-.search{
-    margin: 5%;
-    margin-bottom: 1%;
+.search {
+  margin: 5%;
+  margin-bottom: 1%;
 }
 
-.background{
-    margin: 0%;
-    /* background-image: linear-gradient(#4D553D, #E9F0DE); */
-    /* background-image: url("https://file-ivtwpfvbja.now.sh/"); */
+.background {
+  margin: 0%;
+  /* background-image: linear-gradient(#4D553D, #E9F0DE); */
+  /* background-image: url("https://file-ivtwpfvbja.now.sh/"); */
+}
+/* .backgroundGreen{
+    background: #e5efda
+} */
+.dropdown {
+  margin: 5%;
+  margin-bottom: 1%;
+  margin-top: 1%;
 }
 
-.dropdown{
-    margin: 5%;
-    margin-bottom: 1%;
-    margin-top: 1%;
+.searchButton {
+  margin: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  color: green;
+  background: white;
+  border: 1px;
+  border-style: solid;
+  border-color: black;
 }
 
-.searchButton{
-    margin: 5%;
-    margin-bottom: 5%;
-    margin-top: 1%;
-    color: green;
-    background: white;
-    border: 1px;
-    border-style: solid;
-    border-color: black;
+.homeButton {
+  color: cornflowerblue;
+  background: white;
+  margin: 0.5%;
+  border: 1px;
+  border-style: solid;
+  border-color: black;
+}
+.adminButton {
+  color: cornflowerblue;
+  background: white;
+  border: 1px;
+  border-style: solid;
+  border-color: black;
 }
 
-.loginLink{
-    margin: 5%;
+.loginLink {
+  margin: 5%;
 }
 
-.homePage{
-    margin: 5%;
+.homePage {
+  margin: 5%;
 }
