--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -99,9 +99,46 @@
 }
 
 .loginLink{
-    margin: 5%;
+  margin: 5%;
 }
 
 .homePage{
-    margin: 5%;
+  margin: 5%;
+}
+
+.passwordPage{
+  padding: 10%;  
+  text-align: center;
+}
+
+.passwordEnter{
+  display: inline;
+  padding: 2%;
+}
+
+.inputKey{
+  width: 20%;
+  margin-right: 0%;
+}
+
+.droppedBox{
+  margin-top: 10%;
+  text-align: center;
+
+}
+
+.dropZone{
+  margin-left: 39%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+.dropBox{
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-width: 2px;
+  border-color: rgb(102, 102, 102);
+  border-style: dashed;
+  border-radius: 5px;
 }
