--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -124,18 +124,31 @@
 }
 
 .passwordPage{
-  padding: 10%;  
+  padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
   text-align: center;
+  background: white;
+  border: 2px solid #73AD21;
+  border-radius: 25px;
+}
+
+.passwordPageBackground{
+  padding: 30%;  
+  text-align: center;
+  margin: 0%;
+  background: url("childs_play_light.png");
+  height: 100%; 
+  background-size: cover;
+  background-position: center;
 }
 
 .passwordEnter{
-  display: inline;
-  padding: 2%;
+  padding: 5%;
 }
 
 .inputKey{
-  width: 20%;
-  margin-right: 0%;
+  width: 80%;
 }
 
 .droppedBox{
