--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,4 +1,79 @@
 
+.cardStyle {
+  color: black;
+  font-family: Arial;
+  border: 2px solid #00cc99;
+  margin: 0.5%;
+  padding: 2%;
+  display: inline-table;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+}
+.cardStyleHover {
+  color: black;
+  font-family: Arial;
+  border: 2px solid #00cc99;
+  margin: 0.5%;
+  padding: 2%;
+  display: inline-table;
+  height: 300px;
+  width: 300px;
+  background: #d8ddd8;
+  text-align: center;
+}
+.cardName {
+  font-size: 30px;
+  text-align: center;
+}
+.tag_age_12under {
+  margin-top: 2%;
+  background: #9fc972;
+  color: white;
+  width: 160px;
+  border: 1px black;
+}
+
+.tags{
+  margin: 12%;
+}
+
+.tag_age_13over {
+  margin-top: 2%;
+  background: #4b563a;
+  color: white;
+  width: 160px;
+}
+.tag_symptom_pain {
+  background: #eb9ea1;
+  color: white;
+  width: 160px;
+}
+.tag_symptom_bored_short {
+  background: #f3d26a;
+  color: white;
+  width: 160px;
+}
+.tag_symptom_bored_long {
+  background: #c2bfde;
+  color: white;
+  width: 160px;
+}
+.tag_symptom_anxiety {
+  background: #a1d6ee;
+  color: white;
+  width: 160px;
+}
+.tag_symptom_sadness {
+  background: #fab169;
+  color: white;
+  width: 160px;
+}
+.tag_symptom_cognitive {
+  background: #ccd7c2;
+  color: white;
+  width: 160px;
+}
 .right {
   margin: 5%;
   margin-top: 0%;
@@ -42,8 +117,6 @@
 
 .passwordPage{
   padding: 10%;
-  padding-left: 20%;
-  padding-right: 20%;
   text-align: center;
   background: white;
   border: 2px solid #73AD21;
@@ -51,11 +124,11 @@
 }
 
 .passwordPageBackground{
-  padding: 30%;  
+  padding: 30%;
   text-align: center;
   margin: 0%;
   background: url("childs_play_light.png");
-  height: 100%; 
+  height: 100%;
   background-size: cover;
   background-position: center;
 }
@@ -109,15 +182,38 @@
   padding: 5%;
 }
 
+.white-box{
+        width:65%;
+        border-radius: 25px;
+        border: 2px solid green;
+        padding-bottom: 2%;
+        padding-top: 2%;
+          background: white;
+          color: black;
+          text-align: center;
+          margin:0px auto;
+          display: table;
+          margin-top: 5%;
+}
+
+.description-cardName{
+        font-size: 30px;
+        align: center;
+}
+
 .background {
   margin: 0%;
-  background: url("childs_play_light.png");
-  height: 100%; 
+  background: url("childs_play_dark.png");
   background-size: cover;
-  background-position: center;
+  padding-top: 10%;
+  padding-bottom:100%;
+}
+
+.full-screen{
+        width: 100%;
+        height:100%;
 }
 
 .centered{
   text-align: center;
 }
-
