--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -19,6 +19,7 @@
     height: 15%;
     width: 15%;
     text-align: center;
+    padding: .1%;
 }
 .cardStyleHover {
     color: black;
@@ -30,6 +31,7 @@
     width: 15%;
     background: #d8ddd8;
     text-align: center;
+    padding: .1%;
 }
 .cardName {
     font-size: 30px;
