--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -124,13 +124,14 @@
 }
 
 .passwordPageBackground{
-  padding: 30%;
+  padding: 30%;  
   text-align: center;
   margin: 0%;
   background: url("childs_play_light.png");
   height: 100%;
   background-size: cover;
   background-position: center;
+  background-repeat: repeat-y;
 }
 
 .passwordEnter{
@@ -142,21 +143,16 @@
 }
 
 .droppedBox{
-  margin-top: 10%;
   text-align: center;
-
 }
 
 .dropZone{
-  margin-left: 39%;
-  margin-top: 3%;
   margin-bottom: 3%;
 }
 
 .dropBox{
-  position: relative;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100px;
   border-width: 2px;
   border-color: rgb(102, 102, 102);
   border-style: dashed;
@@ -168,6 +164,24 @@
   border: 1px;
   border-style: solid;
   border-color: black;
+}
+
+.dropPage{
+  padding: 10%;
+  text-align: center;
+  background: white;
+  border: 2px solid #73AD21;
+  border-radius: 25px;
+}
+
+.dropPageBackground{
+  padding: 20%;  
+  text-align: center;
+  margin: 0%;
+  background: url("childs_play_light.png");
+  height: 100%; 
+  background-size: cover;
+  background-position: center;
 }
 
 .loginLink {
@@ -228,8 +242,6 @@
   margin: 0%;
   background: url("childs_play_dark.png");
   background-size: cover;
-  padding-top: 10%;
-  padding-bottom:100%;
 }
 
 .full-screen{
