separate description styling

--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -18,6 +18,7 @@
     border-radius: 25px;
     // background: #09B2AB;
     background: white;
+    min-width: 225px;
   }
 
   .searchPage{
@@ -29,6 +30,7 @@
     border: 2px solid #73AD21;
     border-radius: 25px;
     background: white;
+    min-width: 225px;
   }
 
   .right {
