--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -88,6 +88,29 @@
   opacity: 1;
 }
 
+.homeText{
+  padding: 5%;
+  text-align: center;
+  margin-bottom: 5%;
+  min-width: 250px;
+  border: 2px solid #73AD21;
+  border-radius: 25px;
+  // background: #09B2AB;
+  background: white;
+}
+
+.searchPage{
+  // padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 10%;
+  min-width: 250px;
+  text-align: center;
+  border: 2px solid #73AD21;
+  border-radius: 25px;
+  background: white;
+}
+
 .white-box{
         border-radius: 25px;
         border: 2px solid green;
