--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -1,9 +1,9 @@
 .background {
-    padding-left: 30%;
-    padding-right: 30%;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-bottom: 30%;
     padding-top: 1%;
-    text_align: center;
+    text-align: center;
     background: url("childs_play_dark.png");
     background-size: contain;
     font-family: 'Poppins', sans-serif;
@@ -26,6 +26,7 @@
 }
 
 .homeText{
+  font-size: 175%;
   padding: 5%;
   text-align: center;
   margin-bottom: 5%;
@@ -39,8 +40,8 @@
 }
 
 .searchPage{
-  padding-left: 16%;
-  padding-right: 16%;
+  padding-left: 10%;
+  padding-right: 10%;
   padding-bottom: 10%;
   min-width: 250px;
   text-align: center;
@@ -97,4 +98,9 @@
 
 .tinyText {
   font-size: 70%;
+}
+
+.nameSearch {
+  padding-left: 10%;
+  padding-right: 10%;
 }
