added styling for results page and some card stuff

--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -2,6 +2,18 @@
     width: 160px;
     margin: 1%;
 }
+.homeButton {
+    position: absolute;
+    top:1;
+    left:0;
+    color: cornflowerblue;
+    background: white;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    border: 1px;
+    border-style: solid;
+    border-color: black;
+}
 .resultButtons {
     color: cornflowerblue;
     background: white;
@@ -9,26 +21,24 @@
     border: 1px;
     border-style: solid;
     border-color: black;
+    align: left;
 }
 .cardStyle {
     color: black;
     font-family: Arial;
     border: 2px solid #00cc99;
-    margin: 1%;
+    margin: 1.5%;
     display: inline-table;
-    height: 15%;
-    width: 15%;
     text-align: center;
     padding: .1%;
+    background: white;
 }
 .cardStyleHover {
     color: black;
     font-family: Arial;
     border: 2px solid #00cc99;
-    margin: 1%;
+    margin: 1.5%;
     display: inline-table;
-    height: 15%;
-    width: 15%;
     background: #d8ddd8;
     text-align: center;
     padding: .1%;
@@ -79,4 +89,29 @@
     background: #ccd7c2;
     color: white;
     width: 160px;
+}
+
+.backgroun {
+    background-image: url("childs_play_dark.png");
+    background-size: cover;
+}
+
+.cardBox{
+    // padding: 10%;
+    border: 2px solid #73AD21;
+    border-radius: 25px;
+    background: white;
+    min-width: 225px;
+}
+.resultsText{
+    padding: 5%;
+    text-align: center;
+    // background: #09B2AB;
+    background: white;
+    min-width: 225px;
+    font-size: 50px;
+    color: gray;
+}
+.navbar{
+    width: 100%;
 }
