--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -108,6 +108,8 @@
 .resultsBox{
     border-radius: 25px;
     min-width: 225px;
+    display: inline;
+    max-width: 100%;
 }
 .resultsText{
     padding: 5%;
