--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -91,7 +91,7 @@
     width: 160px;
 }
 
-.backgroun {
+.background {
     background-image: url("childs_play_dark.png");
     background-size: cover;
     height: 100%;
@@ -103,6 +103,13 @@
     border-radius: 25px;
     background: white;
     min-width: 225px;
+}
+
+.resultsBox{
+    border-radius: 25px;
+    min-width: 225px;
+    display: inline;
+    max-width: 100%;
 }
 .resultsText{
     padding: 5%;
