--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -24,8 +24,9 @@
     padding-bottom: 10%;
     padding-top: 1%;
     text_align: center;
+    background-attachment: fixed;
     margin: 0%;
     background: url("childs_play_dark.png");
     background-size: cover;
-    height: 100%;
+//     height: 100%;
   }
