--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -3,9 +3,9 @@
     margin: 1%;
 }
 .homeButton {
-    position: absolute;
-    top:1;
-    left:0;
+    // position: absolute;
+    // top:1;
+    // left:0;
     color: cornflowerblue;
     background: white;
     margin-left: 1%;
@@ -91,10 +91,11 @@
     width: 160px;
 }
 
-.backgroun {
+.background {
     background-image: url("childs_play_dark.png");
     background-size: cover;
-    height: 100%;
+    background-attachment: fixed;
+    // height: 100%;
 }
 
 .cardBox{
