--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -7,7 +7,8 @@
     background: url("childs_play_dark.png");
     background-size: contain;
     font-family: 'Poppins', sans-serif;  
-    height: 100%;
+    // height: 100%;
+    background-attachment: fixed;
     // background-repeat: repeat-y;
 }
   
