--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -69,13 +69,14 @@
 }
 
 .dropPageBackground{
+  background-attachment: fixed;
   padding: 20%;
   text-align: center;
   margin: 0%;
   background: url("childs_play_light.png");
   background-size: cover;
   background-position: center;
-  height: 100%;
+  // height: 100%;
 }
 
 .loginLink {
