change background names

--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -17,7 +17,7 @@
         align: center;
 }
 
-.background {
+.description-background {
     // padding: 30%;
     padding-left: 30%;
     padding-right: 30%;
