--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -91,11 +91,16 @@
     width: 160px;
 }
 
-.background {
+.results-background {
     background-image: url("childs_play_dark.png");
     background-size: cover;
     background-attachment: fixed;
-    // height: 100%;
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-bottom: 10%;
+    padding-top: 1%;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .cardBox{
