--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -17,7 +17,7 @@
         align: center;
 }
 
-.background {
+.description-background {
     // padding: 30%;
     padding-left: 30%;
     padding-right: 30%;
@@ -28,5 +28,6 @@
     margin: 0%;
     background: url("childs_play_dark.png");
     background-size: cover;
-//     height: 100%;
+    height: 100vh;
+    width: 100hw;
   }
