More Weird UI Stuff (#57)
* i give up

* yay

* fixed

--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -104,7 +104,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.cardBox{
+.resultsBox{
     // padding: 10%;
     border: 2px solid #73AD21;
     border-radius: 25px;
@@ -112,7 +112,7 @@
     min-width: 225px;
 }
 
-.resultsBox{
+.cardBox{
     border-radius: 25px;
     min-width: 225px;
     display: inline;
@@ -126,6 +126,7 @@
     min-width: 225px;
     font-size: 50px;
     color: gray;
+    border-radius: 25px;
 }
 .navbar{
     width: 100%;
