--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -104,6 +104,34 @@
     font-family: 'Poppins', sans-serif;
 }
 
+@media only screen and (max-width: 750px) {
+        .results-background {
+            background-image: url("childs_play_dark.png");
+            background-size: cover;
+            background-attachment: fixed;
+            padding-left: 20%;
+            padding-right: 20%;
+            padding-bottom: 1%;
+            padding-top: 1%;
+            text-align: center;
+            font-family: 'Poppins', sans-serif;
+        }
+}
+
+@media only screen and (max-width: 500px) {
+        .results-background {
+            background-image: url("childs_play_dark.png");
+            background-size: cover;
+            background-attachment: fixed;
+            padding-left: 10%;
+            padding-right: 10%;
+            padding-bottom: 1%;
+            padding-top: 1%;
+            text-align: center;
+            font-family: 'Poppins', sans-serif;
+        }
+}
+
 .resultsBox{
     // padding: 10%;
     border: 2px solid #73AD21;
