--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -160,3 +160,10 @@
 .navbar{
     width: 100%;
 }
+
+.image{
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+}
