--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -74,3 +74,10 @@
     @extend .tag;
     background: #ccd7c2;
 }
+
+.image{
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+}
