--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -25,6 +25,9 @@
 .tag{
     color: white;
     width: 160px;
+    border-radius: 25px;
+    margin: 1.5%;
+    display: inline-block;
 }
 .tag_gender_male {
     @extend .tag;
