--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -1,16 +1,16 @@
-.white-box{
-        width: 80%;
-        border-radius: 25px;
-        border: 2px solid green;
-        padding-bottom: 2%;
-        padding-top: 2%;
-        background: white;
-        color: black;
-        text-align: center;
-        margin:0px auto;
-        display: table;
-        margin-top: 5%;
-}
+// .white-box{
+//         width: 80%;
+//         border-radius: 25px;
+//         border: 2px solid green;
+//         padding-bottom: 2%;
+//         padding-top: 2%;
+//         background: white;
+//         color: black;
+//         text-align: center;
+//         margin:0px auto;
+//         display: table;
+//         margin-top: 5%;
+// }
 
 .description-cardName{
         font-size: 30px;
@@ -18,31 +18,38 @@
 }
 
 .description-background {
-    // padding: 30%;
     padding-left: 30%;
     padding-right: 30%;
     padding-bottom: 10%;
     padding-top: 1%;
-    text_align: center;
+    text-align: center;
     background-attachment: fixed;
     margin: 0%;
-    background: url("childs_play_dark.png");
+//     background: url("childs_play_dark.png");
     background-size: cover;
     height: 100vh;
     width: 100hw;
   }
 
+.image {
+        max-width: 300px;
+        max-height: 300px;
+        width: auto;
+        height: auto;
+        text-align: center;
+}
+
+
   @media only screen and (max-width: 750px) {
           .description-background {
-              // padding: 30%;
               padding-left: 20%;
               padding-right: 20%;
               padding-bottom: 1%;
               padding-top: 1%;
-              text_align: center;
+              text-align: center;
               background-attachment: fixed;
               margin: 0%;
-              background: url("childs_play_dark.png");
+        //       background: url("childs_play_dark.png");
               background-size: cover;
               height: 100vh;
               width: 100hw;
@@ -51,15 +58,14 @@
 
 @media only screen and (max-width: 500px) {
         .description-background {
-            // padding: 30%;
             padding-left: 10%;
             padding-right: 10%;
             padding-bottom: 1%;
             padding-top: 1%;
-            text_align: center;
+            text-align: center;
             background-attachment: fixed;
             margin: 0%;
-            background: url("childs_play_dark.png");
+        //     background: url("childs_play_dark.png");
             background-size: cover;
             height: 100vh;
             width: 100hw;
