i killed my backend oops

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -2,21 +2,21 @@
     color: black;
     font-family: Arial;
     border: 2px solid #00cc99;
-    margin: 1.5%;
     display: inline-table;
     text-align: center;
     padding: .1%;
     background: white;
+    width: 100%;
 }
 .cardStyleHover {
     color: black;
     font-family: Arial;
     border: 2px solid #00cc99;
-    margin: 1.5%;
     display: inline-table;
     background: #d8ddd8;
     text-align: center;
     padding: .1%;
+    width: 100%;
 }
 .cardName {
     font-size: 30px;
