--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -17,6 +17,20 @@
         align: center;
 }
 
+.card-description {
+        font-size: 15px;
+        align: center;
+}
+
+.editing-card-description {
+        font-size: 15px;
+        align: center;
+        color: gray;
+        border: 2px solid #bfd2f2;
+
+
+}
+
 .description-background {
     // padding: 30%;
     padding-left: 30%;
