--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -1,3 +1,16 @@
+@media only screen and (max-width: 750px) {
+    .results-background {
+        background-image: url("childs_play_dark.png");
+        background-size: cover;
+        background-attachment: fixed;
+        padding-left: 20%;
+        padding-right: 20%;
+        padding-bottom: 1%;
+        padding-top: 1%;
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+    }
+}
 .cardStyle {
     width: 30%;
     height: 350px;
