--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -1,5 +1,5 @@
 .white-box{
-        width: 80%;
+        width: 100%;
         border-radius: 25px;
         border: 2px solid green;
         padding-bottom: 2%;
@@ -20,15 +20,23 @@
 .card-description {
         font-size: 15px;
         align: center;
+        padding-left: 5%;
+        padding-right: 5%;
 }
 
 .editing-card-description {
         font-size: 15px;
         align: center;
+        padding-left: 5%;
+        padding-right: 5%;
         color: gray;
         border: 2px solid #bfd2f2;
+}
 
-
+.editing-button {
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 5%;
 }
 
 .description-background {
