--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -9,6 +9,19 @@
     background: white;
     margin: 1%;
 }
+@media only screen and (max-width: 1000px) {
+    .cardStyle {
+        width: 100%;
+        height: 300px;
+        display: inline-table;
+        color: black;
+        font-family: Arial;
+        border: 2px solid #00cc99;
+        padding: .5%;
+        background: white;
+        margin: 1%;
+    }
+}
 .cardStyleHover {
     @extend .cardStyle;
     background: #d8ddd8;
@@ -30,12 +43,12 @@
     display: inline-table;
 }
 .cardDescription {
-    height: 10px;
+    height: .1%;
     font-size: 85%;
 }
 .imageCard {
-    width: 150px;
-    height: 150px;
+    width: 100%; //150px;
+    height: 100%; //150px;
 }
 .tag{
     color: white;
