fixed dropdown button

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -43,6 +43,7 @@
     border-radius: 25px;
     margin: 1%;
     display: inline-block;
+    text-align: center;
 }
 .tag_gender_male {
     @extend .tag;
