--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -1,62 +1,33 @@
 .cardStyle {
-    width: 30%;
-    height: 300px;
-    display: inline-table;
     color: black;
     font-family: Arial;
     border: 2px solid #00cc99;
-    padding: .5%;
+    margin: 1.5%;
+    display: inline-table;
+    text-align: center;
+    padding: .1%;
     background: white;
-    margin: 1%;
-}
-@media only screen and (max-width: 1000px) {
-    .cardStyle {
-        width: 100%;
-        height: 300px;
-        display: inline-table;
-        color: black;
-        font-family: Arial;
-        border: 2px solid #00cc99;
-        padding: .5%;
-        background: white;
-        margin: 1%;
-    }
 }
 .cardStyleHover {
-    @extend .cardStyle;
+    color: black;
+    font-family: Arial;
+    border: 2px solid #00cc99;
+    margin: 1.5%;
+    display: inline-table;
     background: #d8ddd8;
+    text-align: center;
+    padding: .1%;
 }
 .cardName {
-    font-size: 130%;
-    text-align: left;
-}
-.cardLeft {
-    width: 50%;
-    height: 200px;
-    text-align: left;
-    display: inline-table;
-}
-.cardRight {
-    width: 50%;
-    height: 200px;
-    text-align: right;
-    display: inline-table;
-}
-.cardDescription {
-    height: .1%;
-    font-size: 85%;
-}
-.imageCard {
-    width: 100%; //150px;
-    height: 100%; //150px;
+    font-size: 30px;
+    text-align: center;
 }
 .tag{
     color: white;
     width: 160px;
     border-radius: 25px;
-    margin: 1%;
+    margin: 1.5%;
     display: inline-block;
-    text-align: center;
 }
 .tag_gender_male {
     @extend .tag;
@@ -105,4 +76,11 @@
 .tag_symptom_cognitive {
     @extend .tag;
     background: #ccd7c2;
+}
+
+.image{
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
 }
