--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -21,6 +21,7 @@
     border: 1px;
     border-style: solid;
     border-color: black;
+    align: left;
 }
 
 .results-background {
@@ -28,10 +29,10 @@
     background-image: url("childs_play_dark.png");
     background-size: cover;
     background-attachment: fixed;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 2%;
-    padding-top: 2%;
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-bottom: 10%;
+    padding-top: 1%;
     text-align: center;
     font-family: 'Poppins', sans-serif;
 }
