--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -48,8 +48,7 @@
     background-attachment: fixed;
     margin: 0%;
     background-size: cover;
-    height: 100vh;
-    width: 100hw;
+    background-color: #bce8b4;
   }
 
 .image {
