--- a/frontend/src/styles/landingpage.scss
+++ b/frontend/src/styles/landingpage.scss
@@ -96,3 +96,18 @@ p {
 .mspace{
     margin-bottom: 10%;
 }
+
+img{
+    border: 1px solid #dddddd;
+    border-radius: 10px;
+}
+
+.cleared{
+    border: 0px;
+    padding-bottom: 20px;
+}
+
+.padded{
+    padding-right: 10%;
+    padding-left: 10%;
+}
