make them pics pop

--- a/frontend/src/styles/landingpage.scss
+++ b/frontend/src/styles/landingpage.scss
@@ -93,13 +93,14 @@ li a:hover {
 }
 
 img{
-    border: 1px solid #dddddd;
     border-radius: 10px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .cleared{
     border: 0px;
     padding-bottom: 20px;
+    box-shadow: None;
 }
 
 .padded{
