--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -1,11 +1,10 @@
+$color-background: #9FC972;
+
 .saveSearch {
     width: 160px;
     margin: 1%;
 }
 .homeButton {
-    // position: absolute;
-    // top:1;
-    // left:0;
     color: cornflowerblue;
     background: white;
     margin-left: 1%;
@@ -25,7 +24,6 @@
 
 .results-background {
     min-height: 100%;
-    background-image: url("childs_play_dark.png");
     background-size: cover;
     background-attachment: fixed;
     padding-left: 2%;
@@ -33,12 +31,11 @@
     padding-bottom: 2%;
     padding-top: 2%;
     text-align: center;
-    font-family: 'Poppins', sans-serif;
+    background-color: $color-background;
 }
 
 @media only screen and (max-width: 750px) {
         .results-background {
-            background-image: url("childs_play_dark.png");
             background-size: cover;
             background-attachment: fixed;
             padding-left: 20%;
@@ -46,13 +43,11 @@
             padding-bottom: 1%;
             padding-top: 1%;
             text-align: center;
-            font-family: 'Poppins', sans-serif;
         }
 }
 
 @media only screen and (max-width: 500px) {
         .results-background {
-            background-image: url("childs_play_dark.png");
             background-size: cover;
             background-attachment: fixed;
             padding-left: 10%;
@@ -60,16 +55,13 @@
             padding-bottom: 1%;
             padding-top: 1%;
             text-align: center;
-            font-family: 'Poppins', sans-serif;
         }
 }
 
 .resultsBox{
-    // padding: 10%;
-    border: 2px solid #73AD21;
-    border-radius: 25px;
     background: white;
     min-width: 225px;
+    background-color: $color-background;
 }
 
 .cardBox{
@@ -79,15 +71,20 @@
     max-width: 100%;
 }
 .resultsText{
-    padding: 5%;
     text-align: center;
-    // background: #09B2AB;
     background: white;
     min-width: 225px;
-    font-size: 50px;
+    font-size: 30px;
     color: gray;
     border-radius: 25px;
+    background-color: $color-background;
+    font-family: 'Poppins', sans-serif;
+
 }
 .navbar{
     width: 100%;
+}
+
+.buttonInline{
+    display: inline-block;
 }
