--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -4,22 +4,16 @@
     display: inline-table;
     color: black;
     font-family: Arial;
-    border: 2px solid #00cc99;
-    padding: .5%;
+    border: 2px solid lightgray;
+    border-radius: 25px;
+    padding: 1%;
     background: white;
     margin: 1%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 @media only screen and (max-width: 1000px) {
     .cardStyle {
         width: 100%;
-        height: 300px;
-        display: inline-table;
-        color: black;
-        font-family: Arial;
-        border: 2px solid #00cc99;
-        padding: .5%;
-        background: white;
-        margin: 1%;
     }
 }
 .cardStyleHover {
@@ -47,8 +41,8 @@
     font-size: 85%;
 }
 .imageCard {
-    width: 100%; //150px;
-    height: 100%; //150px;
+    width: 100%;
+    height: 100%;
 }
 .tag{
     color: white;
