--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -45,10 +45,7 @@
     padding-bottom: 10%;
     padding-top: 1%;
     text-align: center;
-    background-attachment: fixed;
-    margin: 0%;
-    background-size: cover;
-    background-color: #bce8b4;
+    background:  #bce8b4;
   }
 
 .image {
