lots of updates:

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -21,8 +21,8 @@
     background: #d8ddd8;
 }
 .cardName {
-    font-size: 130%;
-    text-align: left;
+    font-size: 150%;
+    text-align: center;
 }
 .cardLeft {
     width: 50%;
