Added in search by name onto How to Use

--- a/frontend/src/styles/landingpage.scss
+++ b/frontend/src/styles/landingpage.scss
@@ -107,3 +107,8 @@ img{
     padding-right: 10%;
     padding-left: 10%;
 }
+
+.imageCentered {
+    text-align: center;
+    display: inline-table;
+}
