--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -3,7 +3,7 @@
     height: 300px;
     display: inline-table;
     color: black;
-    font-family: Arial;
+    font-family: 'Cabin', sans-serif;
     border: 2px solid #00cc99;
     padding: .5%;
     background: white;
@@ -15,7 +15,6 @@
         height: 300px;
         display: inline-table;
         color: black;
-        font-family: Arial;
         border: 2px solid #00cc99;
         padding: .5%;
         background: white;
