--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -33,7 +33,7 @@
     padding-bottom: 2%;
     padding-top: 2%;
     text-align: center;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cabin', sans-serif;
 }
 
 @media only screen and (max-width: 750px) {
@@ -46,7 +46,6 @@
             padding-bottom: 1%;
             padding-top: 1%;
             text-align: center;
-            font-family: 'Poppins', sans-serif;
         }
 }
 
@@ -60,7 +59,6 @@
             padding-bottom: 1%;
             padding-top: 1%;
             text-align: center;
-            font-family: 'Poppins', sans-serif;
         }
 }
 
@@ -70,6 +68,7 @@
     border-radius: 25px;
     background: white;
     min-width: 225px;
+    font-family: 'Cabin', sans-serif;
 }
 
 .cardBox{
@@ -77,6 +76,7 @@
     min-width: 225px;
     display: inline;
     max-width: 100%;
+    font-family: 'Cabin', sans-serif;
 }
 .resultsText{
     padding: 5%;
@@ -87,6 +87,7 @@
     font-size: 50px;
     color: gray;
     border-radius: 25px;
+    font-family: 'Cabin', sans-serif;
 }
 .navbar{
     width: 100%;
