changed all fonts

--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -1,6 +1,7 @@
 .description-cardName{
         font-size: 30px;
         align: center;
+        font-family: 'Cabin', sans-serif;
 }
 
 .description-background {
@@ -14,6 +15,7 @@
     background-size: cover;
     height: 100vh;
     width: 100hw;
+    font-family: 'Cabin', sans-serif;
   }
 
 .image {
