--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -6,7 +6,7 @@
     text-align: center;
     background: url("childs_play_dark.png");
     background-size: contain;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cabin', sans-serif;
     // height: 100%;
     background-attachment: fixed;
     // background-repeat: repeat-y;
