--- a/frontend/src/styles/landingpage.scss
+++ b/frontend/src/styles/landingpage.scss
@@ -7,7 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     min-width: 225px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cabin', sans-serif;
   }
 
 
@@ -18,12 +18,12 @@
     margin-left: auto;
     margin-right: auto;
     min-width: 225px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cabin', sans-serif;
   }
 
   .backgroundL {
     text-align: center;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cabin', sans-serif;
 }
 
 ul {
@@ -89,5 +89,9 @@ p {
     margin-left: auto;
     margin-right: auto;
     min-width: 225px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cabin', sans-serif;
+}
+
+.font{
+    font-family: 'Cabin', sans-serif;
 }
