--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -1,6 +1,6 @@
 .cardStyle {
     width: 30%;
-    height: 300px;
+    height: 600px;
     display: inline-table;
     color: black;
     font-family: Arial;
@@ -23,6 +23,7 @@
 .cardName {
     font-size: 150%;
     text-align: center;
+    height: 75px;
 }
 .cardLeft {
     width: 50%;
@@ -41,12 +42,16 @@
     font-size: 85%;
 }
 .imageCard {
+    width: 60%;
+    height: 200px;
+}
+.tagBox {
     width: 100%;
-    height: 100%;
+    height: 150px;
 }
 .tag{
     color: white;
-    width: 160px;
+    font-size: 70%;
     border-radius: 25px;
     margin: 1%;
     display: inline-block;
