--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -15,6 +15,7 @@
 .description-cardName{
         font-size: 30px;
         align: center;
+        font-family: 'Cabin', sans-serif;
 }
 
 .card-description {
@@ -45,7 +46,12 @@
     padding-bottom: 10%;
     padding-top: 1%;
     text-align: center;
-    background:  #bce8b4;
+    background-attachment: fixed;
+    margin: 0%;
+    background-size: cover;
+    height: 100vh;
+    width: 100hw;
+    font-family: 'Cabin', sans-serif;
   }
 
 .image {
