--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -1,24 +1,20 @@
 .cardStyle {
     width: 30%;
-    height: 300px;
+    height: 600px;
     display: inline-table;
     color: black;
+    font-family: Arial;
+    border: 2px solid lightgray;
+    border-radius: 25px;
+    padding: 1%;
     font-family: 'Cabin', sans-serif;
-    border: 2px solid #00cc99;
-    padding: .5%;
     background: white;
     margin: 1%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 @media only screen and (max-width: 1000px) {
     .cardStyle {
         width: 100%;
-        height: 300px;
-        display: inline-table;
-        color: black;
-        border: 2px solid #00cc99;
-        padding: .5%;
-        background: white;
-        margin: 1%;
     }
 }
 .cardStyleHover {
@@ -26,8 +22,9 @@
     background: #d8ddd8;
 }
 .cardName {
-    font-size: 130%;
-    text-align: left;
+    font-size: 150%;
+    text-align: center;
+    height: 75px;
 }
 .cardLeft {
     width: 50%;
@@ -46,12 +43,16 @@
     font-size: 85%;
 }
 .imageCard {
-    width: 100%; //150px;
-    height: 100%; //150px;
+    width: 60%;
+    height: 200px;
+}
+.tagBox {
+    width: 100%;
+    height: 150px;
 }
 .tag{
     color: white;
-    width: 160px;
+    font-size: 70%;
     border-radius: 25px;
     margin: 1%;
     display: inline-block;
