--- a/frontend/src/styles/landingpage.scss
+++ b/frontend/src/styles/landingpage.scss
@@ -2,7 +2,8 @@
 .homeTextL{
     font-size: 175%;
     padding: 2%;
-    padding-top: 10%;
+    padding-top: 3%;
+    padding-bottom: 0%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -100,6 +101,13 @@ img{
 .cleared{
     border: 0px;
     padding-bottom: 20px;
+    box-shadow: None;
+}
+
+.cleared2{
+    margin-top: 5%;
+    border: 0px;
+    padding-bottom: 0px;
     box-shadow: None;
 }
 
