--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -19,6 +19,7 @@
 
 .passwordPageBackground{
   padding: 30%;
+  padding-top: 10%;
   text-align: center;
   margin: 0%;
   background: url("childs_play_light.png");
