--- a/frontend/src/styles/password.scss
+++ b/frontend/src/styles/password.scss
@@ -1,3 +1,24 @@
-.passwordPageBackground{
+.passwordPage{
+    padding: 10%;
+    text-align: center;
+    background: white;
+    border: 2px solid #73AD21;
+    border-radius: 25px;
     font-family: 'Cabin', sans-serif;
-}
+  }
+  
+  .passwordPageBackground{
+    padding: 30%;
+    text-align: center;
+    margin: 0%;
+    background: url("childs_play_light.png");
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat-y;
+    font-family: 'Cabin', sans-serif;
+  }
+  
+  .passwordEnter{
+    padding: 5%;
+  }
