--- a/frontend/src/styles/update.scss
+++ b/frontend/src/styles/update.scss
@@ -1,3 +1,34 @@
 .dropPageBackground {
     font-family: 'Cabin', sans-serif;
 }
+.dropPage{
+    padding: 10%;
+    text-align: center;
+    background: white;
+    border: 2px solid #73AD21;
+    border-radius: 25px;
+}
+.dropPageBackground{
+    background-attachment: fixed;
+    padding: 20%;
+    text-align: center;
+    background: url("childs_play_light.png");
+    background-size: cover;
+    background-position: center;
+}
+.droppedBox{
+    text-align: center;
+}
+  
+.dropZone{
+    margin-bottom: 3%;
+}
+  
+.dropBox{
+    width: 100%;
+    height: 100px;
+    border-width: 2px;
+    border-color: rgb(102, 102, 102);
+    border-style: dashed;
+    border-radius: 5px;
+}
