--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -1,6 +1,6 @@
 .cardStyle {
     width: 30%;
-    height: 600px;
+    height: 500px;
     display: inline-table;
     color: black;
     font-family: Arial;
@@ -15,6 +15,7 @@
 @media only screen and (max-width: 1000px) {
     .cardStyle {
         width: 100%;
+        height: 0%;
     }
 }
 
@@ -43,9 +44,10 @@
     background: #d8ddd8;
 }
 .cardName {
-    font-size: 150%;
+    font-size: 125%;
     text-align: center;
     height: 75px;
+    margin: 1%;
 }
 .cardNameNoImage {
     font-size: 150%;
@@ -62,7 +64,15 @@
 }
 .tagBox {
     width: 100%;
-    height: 150px;
+    height: 70px;
+}
+@media only screen and (max-width: 1000px) {
+    .tagBox {
+        height: 0%;
+    }
+    .cardName {
+        height: 0%;
+    }
 }
 .tagBoxNoImage {
     width: 100%;
@@ -124,4 +134,8 @@
 .tag_symptom_cognitive {
     @extend .tag;
     background: #ccd7c2;
+}
+.tag_old_old {
+    @extend .tag;
+    background : sienna;
 }
