Deleting Saved Searches  (#103)
* inital commit for deleting saved searches

* stupid close button works

* removed wrong formatting

* double button

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -32,3 +32,15 @@
 .centered{
   text-align: center;
 }
+
+.deleteButton {
+        //display: inline-block;
+        float: right;
+        align-self: right;
+
+}
+
+.item {
+        //display: inline-block;
+        float: left;
+}
