--- a/frontend/src/styles/update.scss
+++ b/frontend/src/styles/update.scss
@@ -1,6 +1,9 @@
 .dropPageBackground {
     font-family: 'Cabin', sans-serif;
 }
+.droppedFilesBackground {
+    background-color: white;
+}
 .dropPage{
     padding: 10%;
     text-align: center;
