--- a/frontend/src/styles/landingpage.scss
+++ b/frontend/src/styles/landingpage.scss
@@ -1,6 +1,7 @@
 $color-background: white;
 $color-back: rgb(205, 232, 212);
 $grad: linear-gradient(to right top, #edffe8, #defad3, #d1f4bd, #c6eea5, #bce88d);
+$grad: linear-gradient(to right top, #ffffff, #e2f9ff, #acf9ff, #94f6d5, #bce88d);
 $cp: #9FC972;
 $cpdark: #4a7f10;
 
@@ -17,7 +18,14 @@ $cpdark: #4a7f10;
   }
 
 .rowcolor{
-    background-image: $grad;
+    // background-image: $grad;
+    padding-top: 5%;
+    background-image: linear-gradient(to top, #fdfffc, #f3fdec, #e9fcdc, #e0f9cc, #d8f7bb, #d0f2af, #c9eea3, #c1e997, #b8e18e, #b0d984, #a7d17b, #9fc972);
+}
+
+.rowcolor2{
+    // background-image: $grad;
+    background-image: radial-gradient(circle, #fdfffc, #effde7, #e3fad2, #d8f7bb, #cdf4a4);
 }
 
 .homeText2L{
@@ -76,6 +84,11 @@ li a:hover {
     padding-top: 5%;
 }
 
+.separator2{
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
 .line{
     padding-bottom: 5%;
     border-bottom: 1px solid #dddddd;
@@ -84,7 +97,6 @@ li a:hover {
 }
 
 .address{
-    padding-left: 35%;
     text-align: left;
 }
 
@@ -161,4 +173,10 @@ img{
         color: lightblue;
     }
     padding-top: 5%;
+    text-align: left;
+    padding-left: 5%;
+}
+
+.inline{
+    display: inline;
 }
