--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -1,10 +1,12 @@
 // $color-background: #9FC972;
 $color-background: white;
+$color-background: #edffe8;
 
 .saveSearch {
     width: 160px;
     margin: 1%;
 }
+
 .homeButton {
     color: cornflowerblue;
     background: white;
