--- a/frontend/src/styles/update.scss
+++ b/frontend/src/styles/update.scss
@@ -15,7 +15,7 @@
     background-attachment: fixed;
     padding: 20%;
     text-align: center;
-    background: url("childs_play_light.png");
+    background-color: #edffe8;
     background-size: cover;
     background-position: center;
 }
