--- a/frontend/src/styles/password.scss
+++ b/frontend/src/styles/password.scss
@@ -11,12 +11,12 @@
     padding: 30%;
     text-align: center;
     margin: 0%;
-    background: url("childs_play_light.png");
     height: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
     font-family: 'Cabin', sans-serif;
+    background-color: #edffe8;
   }
   
   .passwordEnter{
