--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -79,6 +79,7 @@ $color-background: #edffe8;
 .resultsText{
     text-align: center;
     background: white;
+    min-height: 100%;
     min-width: 225px;
     font-size: 30px;
     color: gray;
