rip white space 2018-2018

--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -7,7 +7,9 @@ $color-background: #edffe8;
     padding-right: 25%;
     padding-top: 1%;
     text-align: center;
-    background-size: contain;
+    min-height: 100%;
+    background-size: cover;
+    background-repeat: repeat-y;
     font-family: 'Cabin', sans-serif;
     background-attachment: fixed;
     background-color: $color-background;
