--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -80,9 +80,9 @@ $color-background: #edffe8;
     text-align: center;
     background: white;
     min-width: 225px;
-    font-size: 30px;
+    font-size: 36px;
     color: gray;
-    border-radius: 25px;
+    padding-top: 40px;
     background-color: $color-background;
     font-family: 'Cabin', sans-serif;
 }
