--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -66,6 +66,10 @@ $backcolor: #edffe8;
         text-align: center;
 }
 
+.returnButton {
+        padding-bottom: 25px;
+}
+
 
   @media only screen and (max-width: 750px) {
           .description-background {
