--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -6,25 +6,50 @@ $color-background: #edffe8;
     padding-bottom: 10%;
     padding-top: 1%;
     text-align: center;
+    justify-content: center;
     background-size: contain;
     font-family: 'Cabin', sans-serif;
     background-attachment: fixed;
     background-color: $color-background;
 }
 
-@media only screen and (max-width: 750px) {
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.filterDropdown {
+  margin: 1.5%;
+  display: inline-block;
+}
+
+@media only screen and (max-width: 800px) {
   .background {
     padding-left: 20%;
     padding-right: 20%;
     padding-bottom: 10%;
   }
+  .flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .filterDropdown {
+    margin: 1.5%;
+    align-self: center;
+    display:flex;
+  }
 }
 
 @media only screen and (max-width: 500px) {
   .background {
-    padding-left: 10%;
-    padding-right: 10%;
+    // padding-left: 10%;
+    // padding-right: 10%;
     padding-bottom: 10%;
+  }
+  .filterDropdown {
+    margin: 1.5%;
   }
 }
 
@@ -76,10 +101,7 @@ $color-background: #edffe8;
   margin: 5%;
 }
 
-.filterDropdown {
-  margin: 1.5%;
-  display: inline-block;
-}
+
 
 .searchButton {
   margin: 5%;
